--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>New-test</h1>
+          <h1>Jabari Caire</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/AkilAlikr2016">AkilAlikr2016</a></span>
