--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h3>About Me
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>I'm multi-talented, and currently training as a UX/UI Designer & Website Developer in the U.S. My passion is in the arts, aviation, technology, and history.  I'm a life-long pencil artist, specializing in character & environmental design. I am also a hip-hop dancer (Popper) who specializes in gliding/footwork. Aside from my passion for the arts, I am also a pilot in training and have been flying for 7 years. I have a huge love for technology which is connected to my love for the arts & aviation. I have always been a curious individual who wants to know how things work, why, and how to bring them into being myself. My ultimate goal in life ia to become a life-long masterful creator things. Some of those things being in video game design, architecture, aerospace engineering,  and website & mobile app development. I work well both alone & as a team.</p>
 
 <h3>What I do and Why.
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
