--- a/index.html
+++ b/index.html
@@ -51,21 +51,46 @@
 <h3>What I do and Why.
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills and Cridentials</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>StProject Manager
+One City Early Learning Centers
+June 2016 – Present (7 months)Madison, Wisconsin Area
+• Build and install shelving and cabinetry and arrange classrooms.
+• Assist with the front desk duties such as answering the phones and scheduling appointments.
+</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Feel free to contact me at my email, JabariC13@gmail.com</p>
       </section>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+    <div class="icons">
+							<a href="https://www.youtube.com/channel/UCzHaWAEDc-FA5R50G7gbXNw" target="_blank">
+								<img src="ytIcon.png" width="94" height="95" />
+							</a>	
+
+							<a href="https://twitter.com/DjehutyAkil" target="_blank">
+								<img src="twitterIcon.png" width="94" height="95" />
+							</a>
+
+							<a href="https://www.linkedin.com/in/jabari-caire-9a58b019?trk=nav_responsive_tab_profile_pic" target="_blank">
+								<img src="linkedIn.png" width="94" height="95" /> 
+							</a>
+
+							<a href="https://www.tumblr.com/blog/jabariakilkaenheru" target="_blank"> 
+								<img src="tumblrIcon.png" width="94" height="95" /> </a>
+
+							<a href="https://soundcloud.com/jabari-caire" target="_blank">
+								<img src="soundCloud.png" width="94" height="95" />
+								
+							</a>
+				</div>
   </body>
 </html>
