--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
-
+<div class="icons">
+	<a href="https://www.linkedin.com/in/jabari-caire-9a58b019?trk=nav_responsive_tab_profile_pic" target="_blank">
+	</a> </div>
+	  
     <div class="wrapper">
 
       <section>
@@ -71,26 +74,6 @@ June 2016 – Present (7 months)Madison, Wisconsin Area
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    <div class="icons">
-							<a href="https://www.youtube.com/channel/UCzHaWAEDc-FA5R50G7gbXNw" target="_blank">
-								<img src="ytIcon.png" width="94" height="95" />
-							</a>	
-
-							<a href="https://twitter.com/DjehutyAkil" target="_blank">
-								<img src="twitterIcon.png" width="94" height="95" />
-							</a>
-
-							<a href="https://www.linkedin.com/in/jabari-caire-9a58b019?trk=nav_responsive_tab_profile_pic" target="_blank">
-								<img src="linkedIn.png" width="94" height="95" /> 
-							</a>
-
-							<a href="https://www.tumblr.com/blog/jabariakilkaenheru" target="_blank"> 
-								<img src="tumblrIcon.png" width="94" height="95" /> </a>
-
-							<a href="https://soundcloud.com/jabari-caire" target="_blank">
-								<img src="soundCloud.png" width="94" height="95" />
-								
-							</a>
-				</div>
+ 
   </body>
 </html>
