--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills and Cridentials</h3>
 
-<p>StProject Manager
-One City Early Learning Centers
-June 2016 – Present (7 months)Madison, Wisconsin Area
-• Build and install shelving and cabinetry and arrange classrooms.
-• Assist with the front desk duties such as answering the phones and scheduling appointments.
-</p>
+	      <ul>
+  				<li>UX and UI Developer - Graduated from YWCA Technical Program</li>
+  				<li>Pilot (General Aviation) Student at Wisconsin Aviation</li>
+  				<li>Artist - Concept and Landscape artist</li>
+  				<li>Hip-Hop Dancer (Popping/Animation)</li>
+			</ul>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me</h3>
