--- a/index.html
+++ b/index.html
@@ -49,27 +49,22 @@
 <h3>About Me
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
 
-<p>I'm multi-talented, and currently training as a UX/UI Designer & Website Developer in the U.S. My passion is in the arts, aviation, technology, and history.  I'm a life-long pencil artist, specializing in character & environmental design. I am also a hip-hop dancer (Popper) who specializes in gliding/footwork. Aside from my passion for the arts, I am also a pilot in training and have been flying for 7 years. I have a huge love for technology which is connected to my love for the arts & aviation. I have always been a curious individual who wants to know how things work, why, and how to bring them into being myself. My ultimate goal in life ia to become a life-long masterful creator things. Some of those things being in video game design, architecture, aerospace engineering,  and website & mobile app development. I work well both alone & as a team.</p>
+<p>Aside from my artistic and technical skills, I am very deeply rooted in my Afrakan culture, and am dedicated to restoring some of the lost/untold history, culutre, spirituality, and life styles of the Afrakans in the diaspora (The Americas & Europe). That is an extremely important mission for me, and for all Afrakans across the globe. Everything I do in life is centered around that misson, which include the gifts & talents givien to me by the creator. My spirituality is centered around the sciences & spiritual system of my ancestors of the the Hapi valley (Nile river) in Ancient Kemet (Egypt) which we call a Ma’atian. Since the ancient Afrakans spirituality there was based upon Ma’at who represents truth, justice, harmonious balance, and resiprosity. The driving force of their culture.</p>
 
 <h3>What I do and Why.
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
 
-<p>
+<p>I'm multi-talented, and currently training as a UX/UI Designer & Website Developer in the U.S. My passion is in the arts, aviation, technology, and history.  I'm a life-long pencil artist, specializing in character & environmental design. I am also a hip-hop dancer (Popper) who specializes in gliding/footwork. Aside from my passion for the arts, I am also a pilot in training and have been flying for 7 years. I have a huge love for technology which is connected to my love for the arts & aviation. I have always been a curious individual who wants to know how things work, why, and how to bring them into being myself. My ultimate goal in life ia to become a life-long masterful creator things. Some of those things being in video game design, architecture, aerospace engineering,  and website & mobile app development. I work well both alone & as a team.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills and Cridentials</h3>
-
-	      <ul>
-  				<li>UX and UI Developer - Graduated from YWCA Technical Program</li>
-  				<li>Pilot (General Aviation) Student at Wisconsin Aviation</li>
-  				<li>Artist - Concept and Landscape artist</li>
-  				<li>Hip-Hop Dancer (Popping/Animation)</li>
-			</ul>
-
+	      <p>I am student pilot, concept atist, hip-hop dancer, and a UX and UI designer/developer. 
+	      
+	      </p>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me</h3>
 
-<p>Feel free to contact me at my email, JabariC13@gmail.com</p>
+<p>Feel free to contact me at JabariC13@gmail.com</p>
       </section>
 
     </div>
