--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
-<div class="icons">
-	<a href="https://www.linkedin.com/in/jabari-caire-9a58b019?trk=nav_responsive_tab_profile_pic" target="_blank">
-	</a> </div>
+	<p> For more details about my experience, you can also check out my<a href ="https://www.linkedin.com/in/ebraheemhaneef?trk=nav_responsive_tab_profile">LinkedIn.</a></p>
 	  
     <div class="wrapper">
 
@@ -49,7 +47,7 @@
 <h3>About Me
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
 
-<p>Aside from my artistic and technical skills, I am very deeply rooted in my Afrakan culture, and am dedicated to restoring some of the lost/untold history, culutre, spirituality, and life styles of the Afrakans in the diaspora (The Americas & Europe). That is an extremely important mission for me, and for all Afrakans across the globe. Everything I do in life is centered around that misson, which include the gifts & talents givien to me by the creator. My spirituality is centered around the sciences & spiritual system of my ancestors of the the Hapi valley (Nile river) in Ancient Kemet (Egypt) which we call a Ma’atian. Since the ancient Afrakans spirituality there was based upon Ma’at who represents truth, justice, harmonious balance, and resiprosity. The driving force of their culture.</p>
+<p>I am very deeply rooted in my Afrakan culture, and am dedicated to restoring some of the lost/untold history, culutre, spirituality, and life styles of the Afrakans in the diaspora (The Americas & Europe). That is an extremely important mission for me, and for all Afrakans across the globe. Everything I do in life is centered around that misson, which include the gifts & talents givien to me by the creator. My spirituality is centered around the sciences & spiritual system of my ancestors of the the Hapi valley (Nile river) in Ancient Kemet (Egypt) which we call a Ma’atian. Since the ancient Afrakans spirituality there was based upon Ma’at who represents truth, justice, harmonious balance, and resiprosity. The driving force of their culture.</p>
 
 <h3>What I do and Why.
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
